# PLTM-Claude

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARK_300_SUMMARY.md  BENCHMARK_EXPANSION_PLAN.md  BENCHMARK_RESULTS.md  CRITICAL_FINDINGS.md  C__Users_alber_CascadeProjects_LLTM_CONSCIOUSNESS_SYNTHESIS_COMPLETE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  EXPERIMENTS_COMPLETE.md  EXPERIMENTS_STATUS.md  EXPERIMENT_8_COMPLETE.md  EXPERIMENT_FINAL_SUMMARY.md  FINAL_COMPLETE_SUMMARY.md  FINAL_RESULTS.md  FIXES_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MANUAL_SETUP_REQUIRED.md  MCP_SETUP.md  MULTIHOP_IMPLEMENTATION.md  Makefile  NEXT_STEPS.md  PHASE1_4JUDGE_SYSTEM.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE1_RESULTS.md  PLTM_USAGE.md  README.md  REPRODUCE.md  TESTING_GUIDE.md  TEST_RESULTS.md  VALIDATION_COMPLETE.md  build_shield.py  install.ps1  install.sh  migrate_atoms_to_typed.py  pyproject.toml  requirements.txt  run_200_test_benchmark.py  (+11 more)
data/: pltm_mcp.db
deep-claude-dashboard/: api_server.py  index.html  package-lock.json  package.json  vite.config.js
docs/: improvement_loops.md
examples/: advanced_personality_demo.py  all_experiments_demo.py  personality_mood_demo.py
mcp_server/: CLAUDE_DESKTOP_SETUP.md  README.md  TESTING_PROTOCOL.md  bootstrap_from_file.py  bootstrap_pltm.py  claude_desktop_config.json  pltm_server.py
scripts/: download_models.py  init_db.py  run_tests.sh  setup.sh  start_api.sh
src/: __init__.py
tests/: __init__.py  test_emergence_detector.py  test_hierarchical_memory.py  test_improvement_loops.py  test_learning_engines.py  (+5 more)
(+121 files in other folders)
